Fix bug where hidden forms were not showing.

--- a/app/assets/stylesheets/required/shame.css.scss
+++ b/app/assets/stylesheets/required/shame.css.scss
@@ -121,10 +121,6 @@
   margin:0 0 10px 0;
 }
 
-#add-game-box, #cancel-add-game-button, #add-max-rank-box, #cancel-add-max-rank-button {
-  display: none;
-}
-
 /* Max Rank Buttons */
 .slim-panel-body {
   padding: 10px 15px !important;
